[gd_scene load_steps=4 format=3 uid="uid://bbo74vm05gd1t"]

[ext_resource type="Script" path="res://scripts/space_junk.gd" id="1_mk387"]
[ext_resource type="Texture2D" uid="uid://jamqp440wtn0" path="res://assets/Foozle_2DS0011_Void_MainShip/Main Ship/Main Ship - Engines/PNGs/Main Ship - Engines - Burst Engine.png" id="2_v6bbg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nk25x"]
radius = 11.0

[node name="SpaceJunk" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_mk387")
speed = 100
hp = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("2_v6bbg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_nk25x")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -31)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
